2009-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' improvement.
	
	* tools/lib/r-host/run.sh,
	* tools/lib/r-mtalpha-sim/run.sh.in,	
	* tools/lib/r-mtsparc-sim/run.sh.in: Prefix $RUNNER_PREFIX to
	command lines, to allow e.g. "time" to be used on programs.
	
	* tools/bin/slr.in: Document it.

2009-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make `slc' look more like GCC's front-end.
	
	* tools/bin/slc.in: Run C compiler even if no input files are
	provided; this to allow -dumpversion, etc. Refuse -M and -MM, but
	be graceful with -M[GPDTQF]. Properly handle -include and other -i
	preprocessor flags. Pass -W*, -d*, -pedantic, -ansi, -std* to both
	preprocessor and compiler. Handle input from `-' (standard input).

2009-06-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes.

	* Makefile.am: Fix rule `show-vars': add `tools/bin/' to PATH, not
	`bin/'.

	* configure.am: Define new conditional ENABLE_DEMOS for building
	SL programs during `make all'.

	* Makefile.am,
	* programs/benchmarks/blas/Makefile.am,
	* programs/benchmarks/fft/Makefile.am,
	* programs/benchmarks/ll/Makefile.am,
	* programs/demo/Makefile.am: Use it.

	* programs/benchmarks/blas/blas-test-saxpy.sl,
	* programs/benchmarks/ll/ll2.sl,
	* programs/benchmarks/ll/ll4.sl: Define some test cases via SLT_RUN.

	* programs/benchmarks/nas/is/Makefile.am,
	* programs/benchmarks/quicksort/Makefile.am: Distribute some more files.

	* programs/benchmarks/Makefile.am: Recurse also into `ll'.

	* doc/NEWS.txt: Mention benchmark programs.
	
2009-06-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small fixes.
	
	* programs/benchmarks/ll/ll2.sl,
	* programs/benchmarks/ll/ll4.sl: Implement some more benchmarks.

	* tools/bin/spp (pppalpha.remdefaults): Default place is now 0 as
	per [svp27], not 1.

2009-06-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/lib/t-pppalpha/include/sl_support.h: Update PLACE_LOCAL
	with definition from [svp27].
